parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement program
Rule 3     statement -> group
Rule 4     statement -> slide
Rule 5     group -> GROUP ( params ) { slidegroup }
Rule 6     params -> expression
Rule 7     params -> expression , params
Rule 8     params -> <empty>
Rule 9     expression -> STRING
Rule 10    expression -> NUMBER
Rule 11    slidegroup -> slide
Rule 12    slidegroup -> slidefor
Rule 13    slidegroup -> slide slidegroup
Rule 14    slidegroup -> slidefor slidegroup
Rule 15    slide -> SLIDE ( params ) { contentgroup }
Rule 16    contentgroup -> content
Rule 17    contentgroup -> content contentgroup
Rule 18    content -> title
Rule 19    content -> box
Rule 20    content -> image
Rule 21    content -> contenttext
Rule 22    content -> list
Rule 23    content -> contentfor
Rule 24    content -> table
Rule 25    contenttext -> text
Rule 26    contenttext -> richtext
Rule 27    slidefor -> FOR ( IDENTIFIER , NUMBER , NUMBER ) { slidegroup }
Rule 28    contentfor -> FOR ( IDENTIFIER , NUMBER , NUMBER ) { contentgroup }
Rule 29    title -> TITLE ( complexstring ) ;
Rule 30    box -> horizontalbox
Rule 31    box -> verticalbox
Rule 32    horizontalbox -> HORIZONTALBOX ( NUMBER ) { contentgroup }
Rule 33    verticalbox -> VERTICALBOX ( NUMBER ) { contentgroup }
Rule 34    image -> IMAGE ( complexstring ) ;
Rule 35    text -> TEXT ( complexstring ) ;
Rule 36    richtext -> RICHTEXT ( ) { elementgroup }
Rule 37    elementgroup -> element
Rule 38    elementgroup -> element elementgroup
Rule 39    element -> ELEMENT ( complexstring , STRING ) ;
Rule 40    list -> LIST ( STRING ) { textlist }
Rule 41    table -> TABLE ( STRING , STRING ) ;
Rule 42    table -> TABLE ( STRING ) ;
Rule 43    textlist -> contenttext
Rule 44    textlist -> contenttext textlist
Rule 45    complexstring -> contentstring
Rule 46    complexstring -> contentstring PLUS complexstring
Rule 47    contentstring -> STRING
Rule 48    contentstring -> IDENTIFIER

Terminals, with rules where they appear

(                    : 5 15 27 28 29 32 33 34 35 36 39 40 41 42
)                    : 5 15 27 28 29 32 33 34 35 36 39 40 41 42
,                    : 7 27 27 28 28 39 41
;                    : 29 34 35 39 41 42
ELEMENT              : 39
FOR                  : 27 28
GROUP                : 5
HORIZONTALBOX        : 32
IDENTIFIER           : 27 28 48
IMAGE                : 34
LIST                 : 40
NUMBER               : 10 27 27 28 28 32 33
PLUS                 : 46
RICHTEXT             : 36
SLIDE                : 15
STRING               : 9 39 40 41 41 42 47
TABLE                : 41 42
TEXT                 : 35
TITLE                : 29
VERTICALBOX          : 33
error                : 
{                    : 5 15 27 28 32 33 36 40
}                    : 5 15 27 28 32 33 36 40

Nonterminals, with rules where they appear

box                  : 19
complexstring        : 29 34 35 39 46
content              : 16 17
contentfor           : 23
contentgroup         : 15 17 28 32 33
contentstring        : 45 46
contenttext          : 21 43 44
element              : 37 38
elementgroup         : 36 38
expression           : 6 7
group                : 3
horizontalbox        : 30
image                : 20
list                 : 22
params               : 5 7 15
program              : 2 0
richtext             : 26
slide                : 4 11 13
slidefor             : 12 14
slidegroup           : 5 13 14 27
statement            : 1 2
table                : 24
text                 : 25
textlist             : 40 44
title                : 18
verticalbox          : 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . group
    (4) statement -> . slide
    (5) group -> . GROUP ( params ) { slidegroup }
    (15) slide -> . SLIDE ( params ) { contentgroup }

    GROUP           shift and go to state 2
    SLIDE           shift and go to state 5

    group                          shift and go to state 1
    program                        shift and go to state 4
    statement                      shift and go to state 6
    slide                          shift and go to state 3

state 1

    (3) statement -> group .

    GROUP           reduce using rule 3 (statement -> group .)
    SLIDE           reduce using rule 3 (statement -> group .)
    $end            reduce using rule 3 (statement -> group .)


state 2

    (5) group -> GROUP . ( params ) { slidegroup }

    (               shift and go to state 7


state 3

    (4) statement -> slide .

    GROUP           reduce using rule 4 (statement -> slide .)
    SLIDE           reduce using rule 4 (statement -> slide .)
    $end            reduce using rule 4 (statement -> slide .)


state 4

    (0) S' -> program .



state 5

    (15) slide -> SLIDE . ( params ) { contentgroup }

    (               shift and go to state 8


state 6

    (1) program -> statement .
    (2) program -> statement . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . group
    (4) statement -> . slide
    (5) group -> . GROUP ( params ) { slidegroup }
    (15) slide -> . SLIDE ( params ) { contentgroup }

    $end            reduce using rule 1 (program -> statement .)
    GROUP           shift and go to state 2
    SLIDE           shift and go to state 5

    group                          shift and go to state 1
    program                        shift and go to state 9
    statement                      shift and go to state 6
    slide                          shift and go to state 3

state 7

    (5) group -> GROUP ( . params ) { slidegroup }
    (6) params -> . expression
    (7) params -> . expression , params
    (8) params -> .
    (9) expression -> . STRING
    (10) expression -> . NUMBER

    )               reduce using rule 8 (params -> .)
    STRING          shift and go to state 13
    NUMBER          shift and go to state 11

    expression                     shift and go to state 10
    params                         shift and go to state 12

state 8

    (15) slide -> SLIDE ( . params ) { contentgroup }
    (6) params -> . expression
    (7) params -> . expression , params
    (8) params -> .
    (9) expression -> . STRING
    (10) expression -> . NUMBER

    )               reduce using rule 8 (params -> .)
    STRING          shift and go to state 13
    NUMBER          shift and go to state 11

    expression                     shift and go to state 10
    params                         shift and go to state 14

state 9

    (2) program -> statement program .

    $end            reduce using rule 2 (program -> statement program .)


state 10

    (6) params -> expression .
    (7) params -> expression . , params

    )               reduce using rule 6 (params -> expression .)
    ,               shift and go to state 15


state 11

    (10) expression -> NUMBER .

    ,               reduce using rule 10 (expression -> NUMBER .)
    )               reduce using rule 10 (expression -> NUMBER .)


state 12

    (5) group -> GROUP ( params . ) { slidegroup }

    )               shift and go to state 16


state 13

    (9) expression -> STRING .

    ,               reduce using rule 9 (expression -> STRING .)
    )               reduce using rule 9 (expression -> STRING .)


state 14

    (15) slide -> SLIDE ( params . ) { contentgroup }

    )               shift and go to state 17


state 15

    (7) params -> expression , . params
    (6) params -> . expression
    (7) params -> . expression , params
    (8) params -> .
    (9) expression -> . STRING
    (10) expression -> . NUMBER

    )               reduce using rule 8 (params -> .)
    STRING          shift and go to state 13
    NUMBER          shift and go to state 11

    expression                     shift and go to state 10
    params                         shift and go to state 18

state 16

    (5) group -> GROUP ( params ) . { slidegroup }

    {               shift and go to state 19


state 17

    (15) slide -> SLIDE ( params ) . { contentgroup }

    {               shift and go to state 20


state 18

    (7) params -> expression , params .

    )               reduce using rule 7 (params -> expression , params .)


state 19

    (5) group -> GROUP ( params ) { . slidegroup }
    (11) slidegroup -> . slide
    (12) slidegroup -> . slidefor
    (13) slidegroup -> . slide slidegroup
    (14) slidegroup -> . slidefor slidegroup
    (15) slide -> . SLIDE ( params ) { contentgroup }
    (27) slidefor -> . FOR ( IDENTIFIER , NUMBER , NUMBER ) { slidegroup }

    SLIDE           shift and go to state 5
    FOR             shift and go to state 24

    slidefor                       shift and go to state 23
    slidegroup                     shift and go to state 22
    slide                          shift and go to state 21

state 20

    (15) slide -> SLIDE ( params ) { . contentgroup }
    (16) contentgroup -> . content
    (17) contentgroup -> . content contentgroup
    (18) content -> . title
    (19) content -> . box
    (20) content -> . image
    (21) content -> . contenttext
    (22) content -> . list
    (23) content -> . contentfor
    (24) content -> . table
    (29) title -> . TITLE ( complexstring ) ;
    (30) box -> . horizontalbox
    (31) box -> . verticalbox
    (34) image -> . IMAGE ( complexstring ) ;
    (25) contenttext -> . text
    (26) contenttext -> . richtext
    (40) list -> . LIST ( STRING ) { textlist }
    (28) contentfor -> . FOR ( IDENTIFIER , NUMBER , NUMBER ) { contentgroup }
    (41) table -> . TABLE ( STRING , STRING ) ;
    (42) table -> . TABLE ( STRING ) ;
    (32) horizontalbox -> . HORIZONTALBOX ( NUMBER ) { contentgroup }
    (33) verticalbox -> . VERTICALBOX ( NUMBER ) { contentgroup }
    (35) text -> . TEXT ( complexstring ) ;
    (36) richtext -> . RICHTEXT ( ) { elementgroup }

    TITLE           shift and go to state 25
    IMAGE           shift and go to state 43
    LIST            shift and go to state 27
    FOR             shift and go to state 33
    TABLE           shift and go to state 40
    HORIZONTALBOX   shift and go to state 31
    VERTICALBOX     shift and go to state 28
    TEXT            shift and go to state 46
    RICHTEXT        shift and go to state 45

    contentgroup                   shift and go to state 36
    title                          shift and go to state 37
    contentfor                     shift and go to state 38
    content                        shift and go to state 39
    table                          shift and go to state 26
    verticalbox                    shift and go to state 41
    box                            shift and go to state 29
    text                           shift and go to state 30
    horizontalbox                  shift and go to state 42
    list                           shift and go to state 32
    image                          shift and go to state 44
    contenttext                    shift and go to state 34
    richtext                       shift and go to state 35

state 21

    (11) slidegroup -> slide .
    (13) slidegroup -> slide . slidegroup
    (11) slidegroup -> . slide
    (12) slidegroup -> . slidefor
    (13) slidegroup -> . slide slidegroup
    (14) slidegroup -> . slidefor slidegroup
    (15) slide -> . SLIDE ( params ) { contentgroup }
    (27) slidefor -> . FOR ( IDENTIFIER , NUMBER , NUMBER ) { slidegroup }

    }               reduce using rule 11 (slidegroup -> slide .)
    SLIDE           shift and go to state 5
    FOR             shift and go to state 24

    slide                          shift and go to state 21
    slidefor                       shift and go to state 23
    slidegroup                     shift and go to state 47

state 22

    (5) group -> GROUP ( params ) { slidegroup . }

    }               shift and go to state 48


state 23

    (12) slidegroup -> slidefor .
    (14) slidegroup -> slidefor . slidegroup
    (11) slidegroup -> . slide
    (12) slidegroup -> . slidefor
    (13) slidegroup -> . slide slidegroup
    (14) slidegroup -> . slidefor slidegroup
    (15) slide -> . SLIDE ( params ) { contentgroup }
    (27) slidefor -> . FOR ( IDENTIFIER , NUMBER , NUMBER ) { slidegroup }

    }               reduce using rule 12 (slidegroup -> slidefor .)
    SLIDE           shift and go to state 5
    FOR             shift and go to state 24

    slidegroup                     shift and go to state 49
    slidefor                       shift and go to state 23
    slide                          shift and go to state 21

state 24

    (27) slidefor -> FOR . ( IDENTIFIER , NUMBER , NUMBER ) { slidegroup }

    (               shift and go to state 50


state 25

    (29) title -> TITLE . ( complexstring ) ;

    (               shift and go to state 51


state 26

    (24) content -> table .

    TITLE           reduce using rule 24 (content -> table .)
    IMAGE           reduce using rule 24 (content -> table .)
    LIST            reduce using rule 24 (content -> table .)
    FOR             reduce using rule 24 (content -> table .)
    TABLE           reduce using rule 24 (content -> table .)
    HORIZONTALBOX   reduce using rule 24 (content -> table .)
    VERTICALBOX     reduce using rule 24 (content -> table .)
    TEXT            reduce using rule 24 (content -> table .)
    RICHTEXT        reduce using rule 24 (content -> table .)
    }               reduce using rule 24 (content -> table .)


state 27

    (40) list -> LIST . ( STRING ) { textlist }

    (               shift and go to state 52


state 28

    (33) verticalbox -> VERTICALBOX . ( NUMBER ) { contentgroup }

    (               shift and go to state 53


state 29

    (19) content -> box .

    TITLE           reduce using rule 19 (content -> box .)
    IMAGE           reduce using rule 19 (content -> box .)
    LIST            reduce using rule 19 (content -> box .)
    FOR             reduce using rule 19 (content -> box .)
    TABLE           reduce using rule 19 (content -> box .)
    HORIZONTALBOX   reduce using rule 19 (content -> box .)
    VERTICALBOX     reduce using rule 19 (content -> box .)
    TEXT            reduce using rule 19 (content -> box .)
    RICHTEXT        reduce using rule 19 (content -> box .)
    }               reduce using rule 19 (content -> box .)


state 30

    (25) contenttext -> text .

    TITLE           reduce using rule 25 (contenttext -> text .)
    IMAGE           reduce using rule 25 (contenttext -> text .)
    LIST            reduce using rule 25 (contenttext -> text .)
    FOR             reduce using rule 25 (contenttext -> text .)
    TABLE           reduce using rule 25 (contenttext -> text .)
    HORIZONTALBOX   reduce using rule 25 (contenttext -> text .)
    VERTICALBOX     reduce using rule 25 (contenttext -> text .)
    TEXT            reduce using rule 25 (contenttext -> text .)
    RICHTEXT        reduce using rule 25 (contenttext -> text .)
    }               reduce using rule 25 (contenttext -> text .)


state 31

    (32) horizontalbox -> HORIZONTALBOX . ( NUMBER ) { contentgroup }

    (               shift and go to state 54


state 32

    (22) content -> list .

    TITLE           reduce using rule 22 (content -> list .)
    IMAGE           reduce using rule 22 (content -> list .)
    LIST            reduce using rule 22 (content -> list .)
    FOR             reduce using rule 22 (content -> list .)
    TABLE           reduce using rule 22 (content -> list .)
    HORIZONTALBOX   reduce using rule 22 (content -> list .)
    VERTICALBOX     reduce using rule 22 (content -> list .)
    TEXT            reduce using rule 22 (content -> list .)
    RICHTEXT        reduce using rule 22 (content -> list .)
    }               reduce using rule 22 (content -> list .)


state 33

    (28) contentfor -> FOR . ( IDENTIFIER , NUMBER , NUMBER ) { contentgroup }

    (               shift and go to state 55


state 34

    (21) content -> contenttext .

    TITLE           reduce using rule 21 (content -> contenttext .)
    IMAGE           reduce using rule 21 (content -> contenttext .)
    LIST            reduce using rule 21 (content -> contenttext .)
    FOR             reduce using rule 21 (content -> contenttext .)
    TABLE           reduce using rule 21 (content -> contenttext .)
    HORIZONTALBOX   reduce using rule 21 (content -> contenttext .)
    VERTICALBOX     reduce using rule 21 (content -> contenttext .)
    TEXT            reduce using rule 21 (content -> contenttext .)
    RICHTEXT        reduce using rule 21 (content -> contenttext .)
    }               reduce using rule 21 (content -> contenttext .)


state 35

    (26) contenttext -> richtext .

    TITLE           reduce using rule 26 (contenttext -> richtext .)
    IMAGE           reduce using rule 26 (contenttext -> richtext .)
    LIST            reduce using rule 26 (contenttext -> richtext .)
    FOR             reduce using rule 26 (contenttext -> richtext .)
    TABLE           reduce using rule 26 (contenttext -> richtext .)
    HORIZONTALBOX   reduce using rule 26 (contenttext -> richtext .)
    VERTICALBOX     reduce using rule 26 (contenttext -> richtext .)
    TEXT            reduce using rule 26 (contenttext -> richtext .)
    RICHTEXT        reduce using rule 26 (contenttext -> richtext .)
    }               reduce using rule 26 (contenttext -> richtext .)


state 36

    (15) slide -> SLIDE ( params ) { contentgroup . }

    }               shift and go to state 56


state 37

    (18) content -> title .

    TITLE           reduce using rule 18 (content -> title .)
    IMAGE           reduce using rule 18 (content -> title .)
    LIST            reduce using rule 18 (content -> title .)
    FOR             reduce using rule 18 (content -> title .)
    TABLE           reduce using rule 18 (content -> title .)
    HORIZONTALBOX   reduce using rule 18 (content -> title .)
    VERTICALBOX     reduce using rule 18 (content -> title .)
    TEXT            reduce using rule 18 (content -> title .)
    RICHTEXT        reduce using rule 18 (content -> title .)
    }               reduce using rule 18 (content -> title .)


state 38

    (23) content -> contentfor .

    TITLE           reduce using rule 23 (content -> contentfor .)
    IMAGE           reduce using rule 23 (content -> contentfor .)
    LIST            reduce using rule 23 (content -> contentfor .)
    FOR             reduce using rule 23 (content -> contentfor .)
    TABLE           reduce using rule 23 (content -> contentfor .)
    HORIZONTALBOX   reduce using rule 23 (content -> contentfor .)
    VERTICALBOX     reduce using rule 23 (content -> contentfor .)
    TEXT            reduce using rule 23 (content -> contentfor .)
    RICHTEXT        reduce using rule 23 (content -> contentfor .)
    }               reduce using rule 23 (content -> contentfor .)


state 39

    (16) contentgroup -> content .
    (17) contentgroup -> content . contentgroup
    (16) contentgroup -> . content
    (17) contentgroup -> . content contentgroup
    (18) content -> . title
    (19) content -> . box
    (20) content -> . image
    (21) content -> . contenttext
    (22) content -> . list
    (23) content -> . contentfor
    (24) content -> . table
    (29) title -> . TITLE ( complexstring ) ;
    (30) box -> . horizontalbox
    (31) box -> . verticalbox
    (34) image -> . IMAGE ( complexstring ) ;
    (25) contenttext -> . text
    (26) contenttext -> . richtext
    (40) list -> . LIST ( STRING ) { textlist }
    (28) contentfor -> . FOR ( IDENTIFIER , NUMBER , NUMBER ) { contentgroup }
    (41) table -> . TABLE ( STRING , STRING ) ;
    (42) table -> . TABLE ( STRING ) ;
    (32) horizontalbox -> . HORIZONTALBOX ( NUMBER ) { contentgroup }
    (33) verticalbox -> . VERTICALBOX ( NUMBER ) { contentgroup }
    (35) text -> . TEXT ( complexstring ) ;
    (36) richtext -> . RICHTEXT ( ) { elementgroup }

    }               reduce using rule 16 (contentgroup -> content .)
    TITLE           shift and go to state 25
    IMAGE           shift and go to state 43
    LIST            shift and go to state 27
    FOR             shift and go to state 33
    TABLE           shift and go to state 40
    HORIZONTALBOX   shift and go to state 31
    VERTICALBOX     shift and go to state 28
    TEXT            shift and go to state 46
    RICHTEXT        shift and go to state 45

    contentgroup                   shift and go to state 57
    title                          shift and go to state 37
    list                           shift and go to state 32
    contentfor                     shift and go to state 38
    content                        shift and go to state 39
    table                          shift and go to state 26
    verticalbox                    shift and go to state 41
    box                            shift and go to state 29
    text                           shift and go to state 30
    horizontalbox                  shift and go to state 42
    image                          shift and go to state 44
    contenttext                    shift and go to state 34
    richtext                       shift and go to state 35

state 40

    (41) table -> TABLE . ( STRING , STRING ) ;
    (42) table -> TABLE . ( STRING ) ;

    (               shift and go to state 58


state 41

    (31) box -> verticalbox .

    TITLE           reduce using rule 31 (box -> verticalbox .)
    IMAGE           reduce using rule 31 (box -> verticalbox .)
    LIST            reduce using rule 31 (box -> verticalbox .)
    FOR             reduce using rule 31 (box -> verticalbox .)
    TABLE           reduce using rule 31 (box -> verticalbox .)
    HORIZONTALBOX   reduce using rule 31 (box -> verticalbox .)
    VERTICALBOX     reduce using rule 31 (box -> verticalbox .)
    TEXT            reduce using rule 31 (box -> verticalbox .)
    RICHTEXT        reduce using rule 31 (box -> verticalbox .)
    }               reduce using rule 31 (box -> verticalbox .)


state 42

    (30) box -> horizontalbox .

    TITLE           reduce using rule 30 (box -> horizontalbox .)
    IMAGE           reduce using rule 30 (box -> horizontalbox .)
    LIST            reduce using rule 30 (box -> horizontalbox .)
    FOR             reduce using rule 30 (box -> horizontalbox .)
    TABLE           reduce using rule 30 (box -> horizontalbox .)
    HORIZONTALBOX   reduce using rule 30 (box -> horizontalbox .)
    VERTICALBOX     reduce using rule 30 (box -> horizontalbox .)
    TEXT            reduce using rule 30 (box -> horizontalbox .)
    RICHTEXT        reduce using rule 30 (box -> horizontalbox .)
    }               reduce using rule 30 (box -> horizontalbox .)


state 43

    (34) image -> IMAGE . ( complexstring ) ;

    (               shift and go to state 59


state 44

    (20) content -> image .

    TITLE           reduce using rule 20 (content -> image .)
    IMAGE           reduce using rule 20 (content -> image .)
    LIST            reduce using rule 20 (content -> image .)
    FOR             reduce using rule 20 (content -> image .)
    TABLE           reduce using rule 20 (content -> image .)
    HORIZONTALBOX   reduce using rule 20 (content -> image .)
    VERTICALBOX     reduce using rule 20 (content -> image .)
    TEXT            reduce using rule 20 (content -> image .)
    RICHTEXT        reduce using rule 20 (content -> image .)
    }               reduce using rule 20 (content -> image .)


state 45

    (36) richtext -> RICHTEXT . ( ) { elementgroup }

    (               shift and go to state 60


state 46

    (35) text -> TEXT . ( complexstring ) ;

    (               shift and go to state 61


state 47

    (13) slidegroup -> slide slidegroup .

    }               reduce using rule 13 (slidegroup -> slide slidegroup .)


state 48

    (5) group -> GROUP ( params ) { slidegroup } .

    GROUP           reduce using rule 5 (group -> GROUP ( params ) { slidegroup } .)
    SLIDE           reduce using rule 5 (group -> GROUP ( params ) { slidegroup } .)
    $end            reduce using rule 5 (group -> GROUP ( params ) { slidegroup } .)


state 49

    (14) slidegroup -> slidefor slidegroup .

    }               reduce using rule 14 (slidegroup -> slidefor slidegroup .)


state 50

    (27) slidefor -> FOR ( . IDENTIFIER , NUMBER , NUMBER ) { slidegroup }

    IDENTIFIER      shift and go to state 62


state 51

    (29) title -> TITLE ( . complexstring ) ;
    (45) complexstring -> . contentstring
    (46) complexstring -> . contentstring PLUS complexstring
    (47) contentstring -> . STRING
    (48) contentstring -> . IDENTIFIER

    STRING          shift and go to state 66
    IDENTIFIER      shift and go to state 64

    contentstring                  shift and go to state 65
    complexstring                  shift and go to state 63

state 52

    (40) list -> LIST ( . STRING ) { textlist }

    STRING          shift and go to state 67


state 53

    (33) verticalbox -> VERTICALBOX ( . NUMBER ) { contentgroup }

    NUMBER          shift and go to state 68


state 54

    (32) horizontalbox -> HORIZONTALBOX ( . NUMBER ) { contentgroup }

    NUMBER          shift and go to state 69


state 55

    (28) contentfor -> FOR ( . IDENTIFIER , NUMBER , NUMBER ) { contentgroup }

    IDENTIFIER      shift and go to state 70


state 56

    (15) slide -> SLIDE ( params ) { contentgroup } .

    SLIDE           reduce using rule 15 (slide -> SLIDE ( params ) { contentgroup } .)
    FOR             reduce using rule 15 (slide -> SLIDE ( params ) { contentgroup } .)
    }               reduce using rule 15 (slide -> SLIDE ( params ) { contentgroup } .)
    GROUP           reduce using rule 15 (slide -> SLIDE ( params ) { contentgroup } .)
    $end            reduce using rule 15 (slide -> SLIDE ( params ) { contentgroup } .)


state 57

    (17) contentgroup -> content contentgroup .

    }               reduce using rule 17 (contentgroup -> content contentgroup .)


state 58

    (41) table -> TABLE ( . STRING , STRING ) ;
    (42) table -> TABLE ( . STRING ) ;

    STRING          shift and go to state 71


state 59

    (34) image -> IMAGE ( . complexstring ) ;
    (45) complexstring -> . contentstring
    (46) complexstring -> . contentstring PLUS complexstring
    (47) contentstring -> . STRING
    (48) contentstring -> . IDENTIFIER

    STRING          shift and go to state 66
    IDENTIFIER      shift and go to state 64

    contentstring                  shift and go to state 65
    complexstring                  shift and go to state 72

state 60

    (36) richtext -> RICHTEXT ( . ) { elementgroup }

    )               shift and go to state 73


state 61

    (35) text -> TEXT ( . complexstring ) ;
    (45) complexstring -> . contentstring
    (46) complexstring -> . contentstring PLUS complexstring
    (47) contentstring -> . STRING
    (48) contentstring -> . IDENTIFIER

    STRING          shift and go to state 66
    IDENTIFIER      shift and go to state 64

    contentstring                  shift and go to state 65
    complexstring                  shift and go to state 74

state 62

    (27) slidefor -> FOR ( IDENTIFIER . , NUMBER , NUMBER ) { slidegroup }

    ,               shift and go to state 75


state 63

    (29) title -> TITLE ( complexstring . ) ;

    )               shift and go to state 76


state 64

    (48) contentstring -> IDENTIFIER .

    PLUS            reduce using rule 48 (contentstring -> IDENTIFIER .)
    )               reduce using rule 48 (contentstring -> IDENTIFIER .)
    ,               reduce using rule 48 (contentstring -> IDENTIFIER .)


state 65

    (45) complexstring -> contentstring .
    (46) complexstring -> contentstring . PLUS complexstring

    )               reduce using rule 45 (complexstring -> contentstring .)
    ,               reduce using rule 45 (complexstring -> contentstring .)
    PLUS            shift and go to state 77


state 66

    (47) contentstring -> STRING .

    PLUS            reduce using rule 47 (contentstring -> STRING .)
    )               reduce using rule 47 (contentstring -> STRING .)
    ,               reduce using rule 47 (contentstring -> STRING .)


state 67

    (40) list -> LIST ( STRING . ) { textlist }

    )               shift and go to state 78


state 68

    (33) verticalbox -> VERTICALBOX ( NUMBER . ) { contentgroup }

    )               shift and go to state 79


state 69

    (32) horizontalbox -> HORIZONTALBOX ( NUMBER . ) { contentgroup }

    )               shift and go to state 80


state 70

    (28) contentfor -> FOR ( IDENTIFIER . , NUMBER , NUMBER ) { contentgroup }

    ,               shift and go to state 81


state 71

    (41) table -> TABLE ( STRING . , STRING ) ;
    (42) table -> TABLE ( STRING . ) ;

    ,               shift and go to state 83
    )               shift and go to state 82


state 72

    (34) image -> IMAGE ( complexstring . ) ;

    )               shift and go to state 84


state 73

    (36) richtext -> RICHTEXT ( ) . { elementgroup }

    {               shift and go to state 85


state 74

    (35) text -> TEXT ( complexstring . ) ;

    )               shift and go to state 86


state 75

    (27) slidefor -> FOR ( IDENTIFIER , . NUMBER , NUMBER ) { slidegroup }

    NUMBER          shift and go to state 87


state 76

    (29) title -> TITLE ( complexstring ) . ;

    ;               shift and go to state 88


state 77

    (46) complexstring -> contentstring PLUS . complexstring
    (45) complexstring -> . contentstring
    (46) complexstring -> . contentstring PLUS complexstring
    (47) contentstring -> . STRING
    (48) contentstring -> . IDENTIFIER

    STRING          shift and go to state 66
    IDENTIFIER      shift and go to state 64

    contentstring                  shift and go to state 65
    complexstring                  shift and go to state 89

state 78

    (40) list -> LIST ( STRING ) . { textlist }

    {               shift and go to state 90


state 79

    (33) verticalbox -> VERTICALBOX ( NUMBER ) . { contentgroup }

    {               shift and go to state 91


state 80

    (32) horizontalbox -> HORIZONTALBOX ( NUMBER ) . { contentgroup }

    {               shift and go to state 92


state 81

    (28) contentfor -> FOR ( IDENTIFIER , . NUMBER , NUMBER ) { contentgroup }

    NUMBER          shift and go to state 93


state 82

    (42) table -> TABLE ( STRING ) . ;

    ;               shift and go to state 94


state 83

    (41) table -> TABLE ( STRING , . STRING ) ;

    STRING          shift and go to state 95


state 84

